--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-auth0": "^1.4.4",
