--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@reduxjs/toolkit": "^2.9.0",
     "@supabase/supabase-js": "^2.57.4",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
@@ -16,7 +17,9 @@
     "passport": "^0.7.0",
     "passport-auth0": "^1.4.4",
     "passport-google-oauth20": "^2.0.0",
-    "passport-openidconnect": "^0.1.2"
+    "passport-openidconnect": "^0.1.2",
+    "react-redux": "^9.2.0",
+    "stripe": "^18.5.0"
   },
   "name": "backend",
   "version": "1.0.0",
